--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         }
 
         /* About Section */
-        #about {
-            display: none; /* Hide by default */
-        }
+        /* #about {
+            display: none;
+        } */
 
         .about {
             display: flex;
@@ -131,7 +131,7 @@
 
         .work-card img {
             width: 100%;
-            max-width: 300px;
+            max-width: 500px;
             border-radius: 8px;
         }
 
@@ -188,7 +188,7 @@
         <nav>
             <ul>
                 <li><a href="#work">Work</a></li>
-                <li><a href="test.html">About</a></li>
+                <li><a href="#about">About</a></li>
             </ul>
         </nav>
     </header>
@@ -197,15 +197,15 @@
     <section id="work">
         <h2>My Work</h2>
         <div class="work-cards">
-            <a href="project1-details.html" class="work-card">
-                <h3>Project 1: Mobile App Design</h3>
-                <img src="project1.jpg" alt="Mobile App Design">
+            <a href="https://www.figma.com/design/RgZsDFcQVFFRbLqp9CQMFV/Google-project?node-id=488-4" target="_blank" class="work-card">
+                <h3>Mobile App Design</h3>
+                <img src="./images/mobile-o.png" alt="Mobile App Design">
                 <p>This project involved designing a mobile application aimed at improving user engagement through a clean and intuitive interface.</p>
             </a>
 
-            <a href="project2-details.html" class="work-card">
-                <h3>Project 2: Responsive Website</h3>
-                <img src="project2.jpg" alt="Responsive Website">
+            <a href="https://www.figma.com/design/RgZsDFcQVFFRbLqp9CQMFV/Google-project?node-id=488-4" target="_blank" class="work-card">
+                <h3>Responsive Website</h3>
+                <img src="./images/responsive -0 .png" alt="Responsive Website">
                 <p>This project focused on creating a fully responsive website to provide users with an optimal experience across all devices.</p>
             </a>
         </div>
@@ -215,13 +215,13 @@
     <section id="about">
         <h2>About Me</h2>
         <div class="about">
-            <img src="profile.jpg" alt="Elisabeth Uwamahoro">
+            <img src="./images/my PIC 2.jpg" alt="Elisabeth Uwamahoro">
             <div>
                 <p>Hello, I’m Elisabeth Uwamahoro, a passionate UX Designer with a focus on creating user-centered and intuitive digital experiences. Below are my contact details:</p>
                 <div class="about-links">
                     <a href="https://www.linkedin.com/in/elisabeth-uwamahoro-79b50626b/" target="_blank">LinkedIn</a>
-                    <a href="mailto:uwamahoroelisa@gmail.com">Email</a>
-                    <a href="file:///C:/Users/Mahoro/OneDrive/My%20Resume.pdf" target="_blank">My Resume</a>
+                    <a href="MailTo:uwamahoroelisa@gmail.com" target="_blank">Email</a>
+                    <a href="https://drive.google.com/file/d/1PzPUgvS_eK70_RNJSGzf7dmINiAIhF0F/view?usp=sharing" target="_blank">My Resume</a>
                 </div>
             </div>
         </div>
